# Resume-maker-ai

./: Dockerfile  Dockerfile.txt  README-1.md  build_apk.yml  deploy.yml.txt  index-1.html  main-3.py  pubspec.yaml  requirements-2.txt
.github/workflows/: build_apk.yml  flutter_analyze.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jpeg_carver.cpp  jpeg_carver.h  media_carver.cpp  media_carver.h  native-lib.cpp  neon_scanner.cpp  neon_scanner.h  xxhash64.h
android/app/src/main/kotlin/com/recoverx/app/: CarvedFileListener.kt  DeviceMemoryHelper.kt  MainActivity.kt  NativeListener.kt
android/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: styles.xml
lib/: main.dart  permission_helper.dart  recoverx_bridge.dart
lib/mocks/: mock_recoverx_bridge.dart
lib/models/: recovered_photo.dart
lib/painters/: logo_painter.dart
lib/screens/: cloud_recovery_screen.dart  deep_scan_screen.dart  full_screen_preview.dart  home_screen.dart  paywall_screen.dart  results_screen.dart  scanning_screen.dart
lib/services/: billing_service.dart  cloud_recovery_service.dart  folder_scanner.dart  plan_manager.dart
scripts/: generate_icon.py
